# cc-mini

./: README.md  pyproject.toml
mini_claude/: config.py
src/core/: commands.py  compact.py  config.py  context.py  cost_tracker.py  engine.py  main.py
src/core/tools/: ask_user.py
tests/: test_ask_user.py  test_config.py  test_cost_tracker.py  test_tools.py
