[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mini-claude"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
mini-claude = "mini_claude.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
